fix: fix issue of out of view messages being hidden

--- a/public/styles.css
+++ b/public/styles.css
@@ -167,7 +167,7 @@ body[class="Homepage"]{
     background: #0a0a0a;
     padding: 20px;
     position: relative;
-    overflow: hidden;
+    overflow: scroll;
 }
 
 nav{
